--- a/C3/C3_Set_Demo.html
+++ b/C3/C3_Set_Demo.html
@@ -278,7 +278,7 @@
   <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px;">
     <div>
       <h2 style="font-size:1.1rem;margin:0;">온도/습도/CO₂/일사량 그래프</h2>
-      <div style="font-size:.8rem;color:var(--subtle);">1분 평균, 최근 60분</div>
+      <div style="font-size:.8rem;color:var(--subtle);">1분 평균, 최근 60분 (ESP32 히스토리 기준)</div>
     </div>
   </div>
   <div class="chart-grid">
@@ -440,6 +440,14 @@
     client.subscribe("esp32c3/status");
     client.subscribe("esp32c3/history");
     client.subscribe("esp32c3/config/alarm");
+
+    // ESP32에 60분 히스토리 요청
+    try{
+      client.publish("esp32c3/history/get","GET");
+      log("히스토리 GET 요청 전송");
+    }catch(e){
+      log("히스토리 GET 요청 실패: "+e.message);
+    }
   });
   client.on("reconnect",()=>{
     setMqttStatus(false,"MQTT 재연결 시도 중...");
@@ -573,7 +581,6 @@
   const HISTORY_MAX_MINUTES  = 60;
   const BUCKET_MS            = 60*1000;
   const HISTORY_WINDOW_MS    = 60*60*1000;
-  const HISTORY_LS_KEY       = "esp32_history_v2";
   let currentBucket = null;
 
   function createNewBucket(nowMs){
@@ -613,33 +620,9 @@
     historyData = historyData.filter(rec=> (rec.ts || nowMs) >= cutoff);
   }
 
-  function saveHistoryToLocal(){
-    try{ localStorage.setItem(HISTORY_LS_KEY, JSON.stringify(historyData)); }
-    catch(e){ console.warn("히스토리 저장 실패:", e); }
-  }
-  function loadHistoryFromLocal(){
-    try{
-      const raw = localStorage.getItem(HISTORY_LS_KEY);
-      if(!raw) return;
-      const arr = JSON.parse(raw);
-      if(!Array.isArray(arr)) return;
-      historyData = arr.map(rec=>({
-        ts:    rec.ts    || Date.now(),
-        temp:  rec.temp  ?? null,
-        hum:   rec.hum   ?? null,
-        co2:   rec.co2   ?? null,
-        solar: rec.solar ?? null,
-        rssi:  rec.rssi  ?? null,
-        led:   !!rec.led
-      }));
-      trimHistoryByTime();
-      if(historyData.length>HISTORY_MAX_MINUTES){
-        historyData.splice(0, historyData.length-HISTORY_MAX_MINUTES);
-      }
-      rebuildTableAndCharts();
-      log("브라우저 저장 히스토리 복원: "+historyData.length+"개");
-    }catch(e){ console.warn("히스토리 로드 실패:", e); }
-  }
+  // localStorage 히스토리는 더 이상 사용하지 않음 (ESP32 히스토리만 기준으로 사용)
+  // function saveHistoryToLocal(){ ... }
+  // function loadHistoryFromLocal(){ ... }
 
   function getDisplayHistory(){
     const result = historyData.slice();
@@ -911,17 +894,17 @@
       });
     }
 
-    // 기존 히스토리와 병합
+    // 기존 히스토리와 병합 (ESP에서 온 60개가 기준)
     pushMergedRecords(newRecords);
     currentBucket = null;
     rebuildTableAndCharts();
     log("ESP history 반영(병합): "+historyData.length+"개");
   }
 
-  // ==== alive 체크 ====
+  // ==== alive 체크 (30초 기준) ====
   setInterval(()=>{
     if(!lastDeviceMsgAt) return;
-    if(Date.now()-lastDeviceMsgAt>60000) setDeviceState(false);
+    if(Date.now()-lastDeviceMsgAt>30000) setDeviceState(false);
   },2000);
 
   // ==== LED & reset ====
@@ -964,12 +947,11 @@
   function rebuildTableAndCharts(){
     trimHistoryByTime();
     rebuildTable();
-    saveHistoryToLocal();
+    // localStorage 저장 제거 → 항상 ESP32 기준
     if(tempChart) updateCharts();
   }
 
-  // ==== 시작 시: 로컬 히스토리 + 알람 복원 ====
-  loadHistoryFromLocal();
+  // ==== 시작 시: 알람 설정만 로컬 복원 ====
   loadAlarmFromLocal();
 </script>
 </body>
